@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.259 2002/10/15 11:26:10 grant Exp $
+$NetBSD: CHANGES,v 1.260 2002/10/15 12:32:16 kei Exp $
 
 Changes to the packages collection and infrastructure in 2002:
 
@@ -3263,3 +3263,4 @@ Changes to the packages collection and infrastructure in 2002:
 	Updated popt to 1.7 [martti 2002-10-15]
 	Updated nmh to 1.0.4nb3 [agc 2002-10-15]
 	Added phoenix-0.3 [grant 2002-10-15]
+	Moved xmbdfed from graphics to fonts [kei 2002-10-15]
